Repair gulp and add extra styles

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "supergym",
+  "name": "study_abroad",
   "version": "1.0.0",
-  "description": "Проект: Фитнес-центр - SuperGym ",
+  "description": "Проект: Study Abroad ",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
